--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "Lua.diagnostics.disable": [
-        "undefined-global"
-    ]
+        "undefined-global",
+        "lowercase-global"
+    ],
+    "editor.formatOnSave": true
 }
