嗜血天赋技能

--- a/.dota2editor/ability.conf
+++ b/.dota2editor/ability.conf
@@ -25,6 +25,10 @@
 				"name": "Talent",
 				"list": [
 					{
+						"_id": 1586080518972,
+						"_name": "bloodthirsty"
+					},
+					{
 						"_id": 1585993305214,
 						"_name": "suddenly_strike"
 					}
@@ -32,7 +36,7 @@
 				"open": true
 			}
 		],
-		"_id": 1585993137337,
+		"_id": 1586080326645,
 		"noHead": true,
 		"open": true
 	}
