添加天赋技能暗黑切割

--- a/.dota2editor/ability.conf
+++ b/.dota2editor/ability.conf
@@ -25,6 +25,10 @@
 				"name": "Talent",
 				"list": [
 					{
+						"_id": 1586143556925,
+						"_name": "dark_breaking"
+					},
+					{
 						"_id": 1586080518972,
 						"_name": "bloodthirsty"
 					},
@@ -36,7 +40,7 @@
 				"open": true
 			}
 		],
-		"_id": 1586139064442,
+		"_id": 1586143681134,
 		"noHead": true,
 		"open": true
 	}
