添加天赋技能冲锋

--- a/.dota2editor/ability.conf
+++ b/.dota2editor/ability.conf
@@ -25,6 +25,10 @@
 				"name": "Talent",
 				"list": [
 					{
+						"_id": 1586155347670,
+						"_name": "charge"
+					},
+					{
 						"_id": 1586143556925,
 						"_name": "dark_breaking"
 					},
@@ -40,7 +44,7 @@
 				"open": true
 			}
 		],
-		"_id": 1586143681134,
+		"_id": 1586185157758,
 		"noHead": true,
 		"open": true
 	}
