添加天赋技能狂热

--- a/.dota2editor/ability.conf
+++ b/.dota2editor/ability.conf
@@ -25,6 +25,10 @@
 				"name": "Talent",
 				"list": [
 					{
+						"_id": 1586233566490,
+						"_name": "fanaticism"
+					},
+					{
 						"_id": 1586155347670,
 						"_name": "charge"
 					},
@@ -44,7 +48,7 @@
 				"open": true
 			}
 		],
-		"_id": 1586185157758,
+		"_id": 1586233463071,
 		"noHead": true,
 		"open": true
 	}
