添加天赋技能刚毅不屈，及其他技能图标

--- a/.dota2editor/ability.conf
+++ b/.dota2editor/ability.conf
@@ -25,6 +25,46 @@
 				"name": "Talent",
 				"list": [
 					{
+						"_id": 1586270759031,
+						"_name": "rebirth"
+					},
+					{
+						"_id": 1586270571530,
+						"_name": "soul_harvest"
+					},
+					{
+						"_id": 1586270378791,
+						"_name": "arcane_comprehension"
+					},
+					{
+						"_id": 1586270281698,
+						"_name": "mana_surging"
+					},
+					{
+						"_id": 1586270209383,
+						"_name": "keen"
+					},
+					{
+						"_id": 1586269955441,
+						"_name": "boiling_blood"
+					},
+					{
+						"_id": 1586269691535,
+						"_name": "unstoppable"
+					},
+					{
+						"_id": 1586269558263,
+						"_name": "block_master"
+					},
+					{
+						"_id": 1586269433224,
+						"_name": "source_of_life"
+					},
+					{
+						"_id": 1586253747565,
+						"_name": "unyielding_lua"
+					},
+					{
 						"_id": 1586233566490,
 						"_name": "fanaticism"
 					},
@@ -48,7 +88,7 @@
 				"open": true
 			}
 		],
-		"_id": 1586233463071,
+		"_id": 1586268153265,
 		"noHead": true,
 		"open": true
 	}
