--- a/.dota2editor/ability.conf
+++ b/.dota2editor/ability.conf
@@ -50,7 +50,7 @@
 					},
 					{
 						"_id": 1586269691535,
-						"_name": "unstoppable"
+						"_name": "unstoppable_lua"
 					},
 					{
 						"_id": 1586269558263,
@@ -88,7 +88,7 @@
 				"open": true
 			}
 		],
-		"_id": 1586316395136,
+		"_id": 1586338177877,
 		"noHead": true,
 		"open": true
 	}
