--- a/.dota2editor/ability.conf
+++ b/.dota2editor/ability.conf
@@ -34,7 +34,7 @@
 					},
 					{
 						"_id": 1586270378791,
-						"_name": "arcane_comprehension"
+						"_name": "arcane_comprehension_lua"
 					},
 					{
 						"_id": 1586270281698,
