--- a/.dota2editor/ability.conf
+++ b/.dota2editor/ability.conf
@@ -25,6 +25,10 @@
 				"name": "Talent",
 				"list": [
 					{
+						"_id": 1587006347867,
+						"_name": "miser"
+					},
+					{
 						"_id": 1586270759031,
 						"_name": "rebirth"
 					},
@@ -88,7 +92,7 @@
 				"open": true
 			}
 		],
-		"_id": 1586923368844,
+		"_id": 1587004932543,
 		"noHead": true,
 		"open": true
 	}
