添加天赋药水

--- a/.dota2editor/item.conf
+++ b/.dota2editor/item.conf
@@ -1,8 +1,13 @@
 {
 	"treeView": {
 		"name": "root",
-		"list": [],
-		"_id": 1586412798889,
+		"list": [
+			{
+				"_id": 1587089345985,
+				"_name": "item_talent_potion"
+			}
+		],
+		"_id": 1587089327020,
 		"noHead": true,
 		"open": true
 	}
