加入伤害过滤器，加入处决天赋

--- a/.dota2editor/ability.conf
+++ b/.dota2editor/ability.conf
@@ -30,6 +30,10 @@
 				"name": "Talent",
 				"list": [
 					{
+						"_id": 1587459263082,
+						"_name": "execution"
+					},
+					{
 						"_id": 1587006347867,
 						"_name": "miser"
 					},
@@ -97,7 +101,7 @@
 				"open": true
 			}
 		],
-		"_id": 1587266639631,
+		"_id": 1587459753554,
 		"noHead": true,
 		"open": true
 	}
