巨人杀手天赋

--- a/.dota2editor/ability.conf
+++ b/.dota2editor/ability.conf
@@ -30,6 +30,10 @@
 				"name": "Talent",
 				"list": [
 					{
+						"_id": 1587471257793,
+						"_name": "giant_killer"
+					},
+					{
 						"_id": 1587459263082,
 						"_name": "execution"
 					},
@@ -101,7 +105,7 @@
 				"open": true
 			}
 		],
-		"_id": 1587459753554,
+		"_id": 1587471484485,
 		"noHead": true,
 		"open": true
 	}
