野性光环天赋

--- a/.dota2editor/ability.conf
+++ b/.dota2editor/ability.conf
@@ -30,6 +30,10 @@
 				"name": "Talent",
 				"list": [
 					{
+						"_id": 1587473293311,
+						"_name": "feral_aura"
+					},
+					{
 						"_id": 1587471257793,
 						"_name": "giant_killer"
 					},
