添加天赋技能侍奉

--- a/.dota2editor/ability.conf
+++ b/.dota2editor/ability.conf
@@ -30,6 +30,18 @@
 				"name": "Talent",
 				"list": [
 					{
+						"_id": 1587622193005,
+						"_name": "hammering"
+					},
+					{
+						"_id": 1587621986461,
+						"_name": "mist"
+					},
+					{
+						"_id": 1587621165410,
+						"_name": "serve"
+					},
+					{
 						"_id": 1586269558263,
 						"_name": "block_master"
 					},
