添加天赋技能迷雾

--- a/.dota2editor/ability.conf
+++ b/.dota2editor/ability.conf
@@ -30,6 +30,10 @@
 				"name": "Talent",
 				"list": [
 					{
+						"_id": 1587633334965,
+						"_name": "isolated"
+					},
+					{
 						"_id": 1587622193005,
 						"_name": "hammering"
 					},
