调整天赋技能，加冥灵剑和地狱法袍物品

--- a/.dota2editor/item.conf
+++ b/.dota2editor/item.conf
@@ -21,9 +21,25 @@
 			{
 				"_id": 1589799299045,
 				"_name": "item_int_book"
+			},
+			{
+				"_id": 1589855803167,
+				"_name": "item_nether_sword"
+			},
+			{
+				"_id": "1589856306830_0",
+				"_name": "item_recipe_nether_sword"
+			},
+			{
+				"_id": 1589870205185,
+				"_name": "item_hell_robe"
+			},
+			{
+				"_id": 1589870245732,
+				"_name": "item_recipe_hell_robe"
 			}
 		],
-		"_id": 1589809501065,
+		"_id": 1589878286234,
 		"noHead": true,
 		"open": true
 	}
