超级动力鞋

--- a/.dota2editor/item.conf
+++ b/.dota2editor/item.conf
@@ -37,6 +37,14 @@
 			{
 				"_id": 1589870245732,
 				"_name": "item_recipe_hell_robe"
+			},
+			{
+				"_id": 1589887403971,
+				"_name": "item_super_power_treads"
+			},
+			{
+				"_id": 1589888380947,
+				"_name": "item_recipe_super_power_treads"
 			}
 		],
 		"_id": 1589878286234,
