邪恶头骨、血族披巾

--- a/.dota2editor/item.conf
+++ b/.dota2editor/item.conf
@@ -45,9 +45,25 @@
 			{
 				"_id": 1589888380947,
 				"_name": "item_recipe_super_power_treads"
+			},
+			{
+				"_id": 1591407245570,
+				"_name": "item_evil_skull"
+			},
+			{
+				"_id": 1591409689967,
+				"_name": "item_recipe_evil_skull"
+			},
+			{
+				"_id": 1591411814685,
+				"_name": "item_blood_race_shawl"
+			},
+			{
+				"_id": "1591411857846_0",
+				"_name": "item_recipe_blood_race_shawl"
 			}
 		],
-		"_id": 1589893121946,
+		"_id": 1591405637747,
 		"noHead": true,
 		"open": true
 	}
