--- a/.dota2editor/item.conf
+++ b/.dota2editor/item.conf
@@ -61,9 +61,17 @@
 			{
 				"_id": "1591411857846_0",
 				"_name": "item_recipe_blood_race_shawl"
+			},
+			{
+				"_id": 1591434307104,
+				"_name": "item_extreme_sword"
+			},
+			{
+				"_id": "1591434706983_0",
+				"_name": "item_recipe_extreme_sword"
 			}
 		],
-		"_id": 1591405637747,
+		"_id": 1591433951876,
 		"noHead": true,
 		"open": true
 	}
