--- a/.dota2editor/item.conf
+++ b/.dota2editor/item.conf
@@ -69,9 +69,17 @@
 			{
 				"_id": "1591434706983_0",
 				"_name": "item_recipe_extreme_sword"
+			},
+			{
+				"_id": 1591601834391,
+				"_name": "item_battle_flag"
+			},
+			{
+				"_id": "1591602307443_0",
+				"_name": "item_recipe_battle_flag"
 			}
 		],
-		"_id": 1591433951876,
+		"_id": 1591600540795,
 		"noHead": true,
 		"open": true
 	}
