--- a/.dota2editor/item.conf
+++ b/.dota2editor/item.conf
@@ -77,6 +77,14 @@
 			{
 				"_id": "1591602307443_0",
 				"_name": "item_recipe_battle_flag"
+			},
+			{
+				"_id": 1591604949640,
+				"_name": "item_miracle_staff"
+			},
+			{
+				"_id": 1591610206525,
+				"_name": "item_recipe_miracle_staff"
 			}
 		],
 		"_id": 1591600540795,
