根据英雄主属性，增加初始血量和蓝量

--- a/.dota2editor/ability.conf
+++ b/.dota2editor/ability.conf
@@ -21,6 +21,10 @@
 					{
 						"_id": 1587282874111,
 						"_name": "deal_talent"
+					},
+					{
+						"_id": 1593580614726,
+						"_name": "hero_bonus"
 					}
 				],
 				"open": true
@@ -140,7 +144,7 @@
 				"open": true
 			}
 		],
-		"_id": 1593567592811,
+		"_id": 1593579835586,
 		"noHead": true,
 		"open": true
 	}
